# hashline

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  HASHLINE_HOOKS.md  HASHLINE_TEMPLATE.md  JSON_AWARE_SPEC.md  PLAN.md  README.md  cli_help.md  install.sh
.claude/hooks/: track_hashline.sh
.github/workflows/: bench-release.yml  ci.yml  release.yml
benchmarks/: README.md  baseline.json  compare.py
benchmarks/results/: v0.1.10.json  v0.1.12.json  v0.1.13.json  v0.1.14.json  v0.1.3.json  v0.1.4.json  v0.1.5.json  v0.1.6.json  v0.1.7.json  v0.1.8.json  v0.1.9.json
contrib/: HOMEBREW_AUTOMATION.md
contrib/hooks/: check_before_apply.sh  track_hashline.sh
contrib/opencode-sdk-bench/: .gitignore  BASELINE_2026-03-04.md  DASHBOARD_STATUS.md  DESIGN.md  FIXTURES.md  KNOWN_ISSUES.md  LOGGING_FIX.md  METHODOLOGY.md  PLAN.md  PROGRESS_BAR_FIX.md  README.md  START.md  SUCCESS.md  TEST_COMPARISON.md  TROUBLESHOOTING.md  WORK_SUMMARY.md  clear-data.sh  package-lock.json  package.json  run-report.schema.json  server.js  tsconfig.json
contrib/templates/: AGENTS_CURSOR.md  AGENTS_GENERIC.md  AGENTS_WINDSURF.md
man/: hashline-apply.1  hashline-hash.1  hashline-read.1  hashline.1
src/: cli.rs  doctor.rs  edit.rs  error.rs  format.rs  hash.rs  heuristics.rs  hook.rs  json.rs  lib.rs  main.rs  parse.rs  setup.rs  usage.rs  util.rs
tests/: comparison.rs  fuzz.rs  integration.rs  json_integration.rs
tests/fixtures/: 01_simple_single_line.json  02_context_ambiguity.json  03_many_similar_lines.json  04_indentation_sensitive.json  (+6 more)
(+88 files in other folders)
