[package]
name = "hashline"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh32"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
