[package]
name = "hashline"
version = "0.1.8"
edition = "2021"
license = "MIT"

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh32"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "mangen"
path = "src/bin/mangen.rs"
